--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "image2url",
   "version": "1.0.0",
-  "description": "Image to Url",
+  "description": "Converts an image to a url using discord.js",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
