--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/crizmo/img-to-url.git",
-    "homepage": "https://github.com/crizmo/img-to-url#readme"
+    "url": "https://github.com/crizmo/image2url.git",
+    "homepage": "https://github.com/crizmo/image2url#readme"
   },
   "keywords": [
     "tourl",
