--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "discord.js",
     "imagetourl",
     "image",
-    "image2url",
+    "image2url"
   ],
   "author": "Criz",
   "license": "ISC",
