--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.5",
   "description": "Converts image to url using discord.js",
   "main": "index.js",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/crizmo"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
