--- a/tests/.env_example
+++ b/tests/.env_example
@@ -1,3 +1,5 @@
+# -------------- On Discord -------------- 
+
 DISCORD_TOKEN = "your token here" # The token of your bot. You can get it from https://discordapp.com/developers/applications/me
 DISCORD_CHANNEL = "channel id here" # The channel id of the channel where you want to send the images.
 
@@ -12,3 +14,7 @@ DISCORD_CHANNEL = "channel id here" # The channel id of the channel where you wa
 # - Send Messages
 # - Embed Links
 # - Attach Files
+
+# -------------- On Imgbb --------------
+
+IMG_BB_KEY = "your key here" # The key of your imgbb account. You can get it from https://api.imgbb.com/
