--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "author": "Kurizu",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.7",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
+    "form-data": "^4.0.0",
     "fs": "^0.0.1-security"
   }
 }
